# tap-didcomm-rs

./: .cursorignore  .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md
.cursor/rules/: git.mdc  lessons.mdc  prds.mdc  rust.mdc  security.mdc  tasks.mdc  typescript.mdc
.github/workflows/: ci.yml
prds/: actors.md  encryption.md  typescript.md  v1.md
tap-didcomm-core/: Cargo.toml  README.md
tap-didcomm-core/src/: crypto.rs  error.rs  lib.rs  message.rs  pack.rs  plugin.rs  prelude.rs  tests.rs  types.rs  utils.rs
tap-didcomm-core/src/jwe/: algorithms.rs  error.rs  header.rs  key_agreement.rs  key_wrapping.rs  message.rs  mod.rs  types.rs
tap-didcomm-node/: Cargo.toml  README.md
tap-didcomm-node/src/: actor.rs  dispatch.rs  error.rs  lib.rs  mock.rs  node.rs  tests.rs
tap-didcomm-ts/: .eslintrc.json  .gitignore  .npmignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.examples.json  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
tap-didcomm-ts/examples/: basic-usage.ts
tap-didcomm-ts/examples/browser/: index.html
tap-didcomm-ts/examples/node/: index.ts
tap-didcomm-ts/examples/plugins/: custom-crypto.ts  custom-resolver.ts
tap-didcomm-ts/scripts/: copy-wasm.js
tap-didcomm-ts/src/: client.ts  index.ts  plugins.ts  types.ts
tap-didcomm-ts/src/types/: wasm.d.ts
tap-didcomm-ts/src/wasm/: core.ts  loader.ts  node.ts  types.ts  wasm.d.ts
tap-didcomm-ts/tests/: client.test.ts  plugins.test.ts  types.test.ts
tap-didcomm-ts/tests/browser/: didcomm.spec.ts
tap-didcomm-ts/tests/browser/test-app/: index.html
tap-didcomm-ts/tests/node/: didcomm.test.ts  performance.test.ts  setup.ts  utils.ts
tap-didcomm-ts/tests/setup/: setup.ts
tap-didcomm-ts/tests/unit/: client.test.ts  plugins.test.ts
tap-didcomm-ts/tests/unit/wasm/: loader.test.ts
tap-didcomm-ts/tests/wasm/: loader.test.ts
tap-didcomm-web/: Cargo.toml  README.md
tap-didcomm-web/src/: error.rs  handlers.rs  lib.rs  mock.rs  server.rs  tests.rs
