[workspace]
resolver = "2"
members = [
    "tap-didcomm-core",
    "tap-didcomm-node",
    "tap-didcomm-web",
]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"

# SSI dependencies
ssi = "0.7"  # For DIDComm v2, encryption, and DID resolution

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
anyhow = "1.0" 