[package]
name = "tap-didcomm-core"
version = "0.1.0"
edition = "2021"
authors = ["Pelle Braendgaard <pelle@notabene.id>"]
license = "MIT"
description = "Core DIDComm v2 message handling with async signing, encryption, and verification"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# SSI dependencies
ssi = { workspace = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

# Base64 encoding/decoding
base64 = "0.21"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
mockall = "0.11"

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"] 