[package]
name = "tap-didcomm-node"
version = "0.1.0"
edition = "2021"
authors = ["Pelle Braendgaard <pelle@notabene.id>"]
license = "MIT"
description = "Abstract DIDComm node implementation with Actix Actor support"

[dependencies]
# Local dependencies
tap-didcomm-core = { path = "../tap-didcomm-core" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Actor system
actix = "0.13"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Window", "Response", "RequestInit", "RequestMode"], optional = true }

# Base64 dependency
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
actix-rt = "2.9"
mockall = "0.11"
env_logger = "0.10"

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "tap-didcomm-core/wasm"] 