[package]
name = "tap-didcomm-node"
version = "0.1.0"
edition = "2021"
authors = ["Pelle Braendgaard <pelle@notabene.id>"]
license = "Apache-2.0"
description = "Node.js bindings for TAP DIDComm implementation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local dependencies
tap-didcomm-core = { path = "../tap-didcomm-core", features = ["wasm"] }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Actor system
actix-rt = "2.9"

# WASM support (optional)
wasm-bindgen = { version = "0.2.91", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
js-sys = { version = "0.3.68", optional = true }
web-sys = { version = "0.3.68", features = ["Window", "Performance"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
getrandom = { version = "0.2.12", features = ["js"], optional = true }

# Base64 dependency
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
env_logger = "0.10"
wasm-bindgen-test = "0.3.41"
wiremock = "0.5"

[features]
default = []
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "serde-wasm-bindgen",
    "getrandom",
    "tap-didcomm-core/wasm"
] 