[package]
name = "tap-didcomm-web"
version = "0.1.0"
edition = "2021"
authors = ["NotaBene <info@notabene.id>"]
license = "MIT"
description = "HTTP server wrapper for DIDComm node"

[dependencies]
# Local dependencies
tap-didcomm-core = { path = "../tap-didcomm-core" }
tap-didcomm-node = { path = "../tap-didcomm-node" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Web server
actix-web = "4.4"
actix-cors = "0.6"

# Logging
tracing-actix-web = "0.7"

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["json"] } 