[package]
name = "tap-didcomm-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tap-didcomm-core = { path = "../tap-didcomm-core" }
tap-didcomm-node = { path = "../tap-didcomm-node" }
actix-web = "4.4"
actix = "0.13"
actix-cors = "0.6"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
tracing-actix-web = "0.7"
env_logger = "0.10"
base64 = "0.21"
log = "0.4"

# SSI dependencies
ssi = { version = "0.7", features = ["http-did"] }
ssi-jwk = "0.1"
ssi-jws = "0.1"
ssi-dids = { version = "0.1", features = ["http"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs" 