[package]
name = "tap-didcomm-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tap-didcomm-core = { path = "../tap-didcomm-core" }
tap-didcomm-node = { path = "../tap-didcomm-node" }
warp = "0.3"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = { version = "4.2", features = ["uuid"] }
utoipa-swagger-ui = "6.0"

# SSI dependencies
ssi = { version = "0.7", features = ["http-did"] }
ssi-jwk = "0.1"
ssi-jws = "0.1"
ssi-dids = { version = "0.1", features = ["http"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs" 